--- a/spatial_water_column_metabolism_for_paper.Rmd
+++ b/spatial_water_column_metabolism_for_paper.Rmd
@@ -18,78 +18,62 @@ library(ggplot2)
 #setwd("C:/Users/kauf093/OneDrive - PNNL/Documents/2020 RC2/august_manual_chamber_testing");
 ```
 
-## import data and clean up
-
+## import rate and temp data, reshape, and clean up
 ```{r message=FALSE}
-rawdata<-read.csv("//pnl/projects/SBR_SFA/RC2/open_channel_metabolism_manuscript/data analysis/water_column_resp_for_initial_exploration.csv")
-colnames(rawdata)[1]<-"SID"
-rawdata$DO.slope.mgday<-rawdata$DO.slope*60*24
-length(rawdata$SID)
+indata<-read.csv("RC2_Minidot_lm_summary_v1.csv")
+names<-rbind(as.data.frame(indata$Site_ID) ,as.data.frame(indata$Site_ID), as.data.frame(indata$Site_ID))
+doslope1<-as.data.frame(indata$Dissolved_Oxygen_1_Slope)
+colnames(doslope1)<-"doslope"
+doslope2<-as.data.frame(indata$Dissolved_Oxygen_2_Slope)
+colnames(doslope2)<-"doslope"
+doslope3<-as.data.frame(indata$Dissolved_Oxygen_3_Slope)
+colnames(doslope3)<-"doslope"
+doslope<-rbind(doslope1,doslope2,doslope3)
+doslope<-doslope*60*24
 
-rawdata<-subset(rawdata, DO.rsq>=0.25)
-length(rawdata$SID)
+doNRMSE1<-as.data.frame(indata$Dissolved_Oxygen_1_NRMSE)
+colnames(doNRMSE1)<-"doNRMSE"
+doNRMSE2<-as.data.frame(indata$Dissolved_Oxygen_2_NRMSE)
+colnames(doNRMSE2)<-"doNRMSE"
+doNRMSE3<-as.data.frame(indata$Dissolved_Oxygen_3_NRMSE)
+colnames(doNRMSE3)<-"doNRMSE"
+doNRMSE<-rbind(doNRMSE1,doNRMSE2,doNRMSE3)
 
-mean_T<-read.csv("//pnl/projects/SBR_SFA/RC2/open_channel_metabolism_manuscript/data analysis/mean_T_trim.csv")
-T_slope<-read.csv("//pnl/projects/SBR_SFA/RC2/open_channel_metabolism_manuscript/data analysis/T_slope.csv")
-colnames(T_slope)[2]<-"T_1_slope"
+Tmean1<-as.data.frame(indata$Temperature_1_Mean)
+colnames(Tmean1)<-"Tmean"
+Tmean2<-as.data.frame(indata$Temperature_2_Mean)
+colnames(Tmean2)<-"Tmean"
+Tmean3<-as.data.frame(indata$Temperature_3_Mean)
+colnames(Tmean3)<-"Tmean"
+Tmean<-rbind(Tmean1,Tmean2,Tmean3)
 
-TSS<-read.csv("//pnl/projects/SBR_SFA/RC2/open_channel_metabolism_manuscript/data analysis/TSS.csv")
-colnames(TSS)[1]<-"vial_ID"
-colnames(TSS)[2]<-"SID"
-colnames(TSS)[3]<-"TSSmgl"
+rawdata<-cbind(names,doslope,doNRMSE,Tmean)
+colnames(rawdata)<-c("SID","DO.slope.mgday","DO.NRMSE","T_mean")
 
+#remove all the intermediate tables
+rm(list=setdiff(ls(), "rawdata"))
 
-merged_T<-merge(rawdata,mean_T,"SID")
-merged_T<-merge(merged_T,T_slope,"SID")
+#remove any rows where DO NRMSE is greater than 0.01
+rawdata<-subset(rawdata, DO.NRMSE<=0.01)
 
-merged_TSS<-merge(rawdata,TSS,"SID")
-
-
-#create aggregate tables
-#stream order and DO slope by site
-site_mean <- aggregate(list(rawdata$DO.slope.mgday,rawdata$NHD.NEXSS_StreamOrde),list(rawdata$SID) , mean)
-colnames(site_mean)[1]<-"SID"
-colnames(site_mean)[2]<-"DO.slope.mgday.mean"
-colnames(site_mean)[3]<-"stream_order"
-site_mean<-merge(site_mean,mean_T,"SID")
-
-site_max <- aggregate(list(rawdata$DO.slope.mgday),list(rawdata$SID) , max)
-colnames(site_max)[1]<-"SID"
-colnames(site_max)[2]<-"DO.slope.mgday.max"
-site_min <- aggregate(list(rawdata$DO.slope.mgday),list(rawdata$SID) , min)
-colnames(site_min)[1]<-"SID"
-colnames(site_min)[2]<-"DO.slope.mgday.min"
-
-site_mean<-merge(list(site_mean,mean_T,site_max,site_min),"SID")
-
-write.csv(site_mean,"site_mean.csv")
-
-
-#DO slope by stream order
-stream_order_mean <- aggregate(list(rawdata$DO.slope.mgday),list(rawdata$NHD.NEXSS_StreamOrde) , mean)
-colnames(stream_order_mean)[1]<-"stream_order"
-colnames(stream_order_mean)[2]<-"DO.slope.mgday.mean"
-
-
+#average rate and temperature data by site
+site_mean <- aggregate(cbind(DO.slope.mgday,T_mean) ~ SID, data = rawdata, FUN = mean, na.rm = TRUE)
 
 ```
-
-## import chemistry data
+## import chemistry data, format, and clean up
 
 ```{r message=FALSE}
 #chemistry data 
-chemdataheaders<-read.csv("//pnl/projects/SBR_SFA/RC1/RC2-Data-Deliveries/RC2-Spatial-Study-2021-Sample-Data/SPS_DIC_NPOC_TN_TSS.csv",skip = 2, header = F, nrows = 1, as.is = T)
-chemdata<-read.csv("//pnl/projects/SBR_SFA/RC1/RC2-Data-Deliveries/RC2-Spatial-Study-2021-Sample-Data/SPS_DIC_NPOC_TN_TSS.csv",skip=14,header = F)
+#//pnl/projects/SBR_SFA/RC1/RC2-Data-Deliveries/RC2-Spatial-Study-2021-Sample-Data/SPS_DIC_NPOC_TN_TSS.csv
+chemdataheaders<-read.csv("SPS_DIC_NPOC_TN_TSS.csv",skip = 2, header = F, nrows = 1, as.is = T)
+chemdata<-read.csv("SPS_DIC_NPOC_TN_TSS.csv",skip=14,header = F)
 colnames(chemdata)= chemdataheaders
 
 #site ID to vial ID mapping info
-IDmapping<-read.csv("//pnl/projects/SBR_SFA/RC2/04_Spatial_Study_2021/06_Metadata/RC2 Spatial Study (Responses) - Form Responses 1(updated 2022-05-17).csv",header = T)
+#//pnl/projects/SBR_SFA/RC2/04_Spatial_Study_2021/06_Metadata/RC2 Spatial Study (Responses) - Form Responses 1(updated 2022-05-17).csv
+IDmapping<-read.csv("RC2 Spatial Study (Responses) - Form Responses 1(updated 2022-05-17).csv",header = T)
 IDmapping<-data.frame(IDmapping$Site_Vial_ID_.SPS_4_digit_numeric_code,IDmapping$ID)
 
-```
-
-##format and prep chemistry data
-```{r message=FALSE, warning=FALSE}
 chemdata<-chemdata[!(chemdata$Field_Name=="#End_Data"),]
 chemdata$sample_id<-substr(chemdata$Sample_Name,0,8)
 chemdata$repnum<-substr(chemdata$Sample_Name,10,10)
@@ -155,161 +139,61 @@ chemdata_agg <- subset(chemdata_agg, select = -(sample_id.y))
 
 chemdata_agg<-merge(x=chemdata_agg, y=TSSagg,by.x="sample_id",by.y="Group.1", all.x=TRUE, sort = TRUE)
 chemdata_agg <- subset(chemdata_agg, select = -(sample_id.y))
+```
+
+#merge rate, temp, and chem data
+```{r message=FALSE}
 
 #merge chem data with DO rate data
 chemdata_merged<-merge(x=chemdata_agg, y=site_mean, by.x="IDmapping.ID", by.y="SID",all=TRUE)
-chemdata_merged<-na.omit(chemdata_merged)
-
+#write chemdata_merged
+write.csv(chemdata_merged,"chem_data.csv", row.names = FALSE)
 ```
 
-##initial analysis
+#dot plot figure (comparison of repilcates)
 ```{r message=FALSE}
-#histogram
-hist(rawdata$DO.slope.mgday,breaks=25,main="",xlab="Respiration rate (mg O2/L*day)", ylab="frequency")
-
-#count greater than/less than criterion value
-gt0p01<-which(rawdata$DO.slope.mgday>0.01)
-lte0p01<-which(rawdata$DO.slope.mgday<=0.01)
-gt0<-which(rawdata$DO.slope.mgday>0)
-lte0<-which(rawdata$DO.slope.mgday<=0)
-
-site_mean$range<-site_mean$DO.slope.mgday.max-site_mean$DO.slope.mgday.min
-site_mean$range_over_mean=site_mean$range/abs(site_mean$DO.slope.mgday.mean)
-hist(site_mean$range_over_mean,breaks=100)
-devlte0p5<-which(site_mean$range_over_mean<=0.5)
-
-
-#plot raw slope data vs. site ID boxplot
-ggplot(rawdata, aes(x=SID, y=DO.slope.mgday)) +  geom_boxplot(fill='green') + ylab("Respiration rate (mg O2/L*day)") + xlab("Site ID") + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
-
-#plot raw slope data vs. site ID dot plot
-
-
-
-
-ggplot(rawdata, aes(x=SID, y=DO.slope.mgday)) +  geom_boxplot(fill='green') + ylab("Respiration rate (mg O2/L*day)") + xlab("Site ID") + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
-
-#plot one box of all sites in grams per m3 per day
-ggplot(rawdata, aes(y=DO.slope.mgday/1000)) +  geom_boxplot(fill='blue') + ylab("Rate (grams per m3 per day)")
-#plot raw slope data vs. stream order
-plot(rawdata$NHD.NEXSS_StreamOrde, rawdata$DO.slope.mgday, main="open channel respiration vs stream order",
-   xlab="stream order ", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#box plot raw slope data vs. stream order
-boxplot(DO.slope.mgday~NHD.NEXSS_StreamOrde,data=rawdata, main="",
-   xlab="Stream Order", ylab="Respiration rate (mg O2/L*day)")
-slope.streamorder <- lm(DO.slope.mgday ~ NHD.NEXSS_StreamOrde, data=rawdata)
-X = sort(unique(rawdata$NHD.NEXSS_StreamOrde))
-lines(x=1:length(X),
-y=predict(slope.streamorder,data.frame(NHD.NEXSS_StreamOrde=X)),col="blue",lwd=2)
-
-boxplot_linreg <- lm(DO.slope.mgday ~ NHD.NEXSS_StreamOrde, data=rawdata)
-summary(boxplot_linreg)
-
-
-
-#plot site-mean slope data vs. stream order
-plot(site_mean$stream_order, site_mean$DO.slope.mgday.mean, main="site-mean open channel respiration vs stream order",
-   xlab="stream order ", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#box plot site-mean slope data vs. stream order
-boxplot(DO.slope.mgday.mean~stream_order,data=site_mean, main="site-mean open channel respiration vs stream order",
-   xlab="Stream Order", ylab="DO slope (mg*l^-1*day^-1)")
-
-#plot stream-order-mean slope data vs. stream order
-plot(stream_order_mean$stream_order, stream_order_mean$DO.slope.mgday.mean, main="stream-order-mean open channel respiration vs stream order",
-   xlab="stream order ", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. total catchment area
-plot(rawdata$NHD.NEXSS_TotDASqKM, rawdata$DO.slope.mgday, main="open channel respiration vs total drained area",
-   xlab="total DA (sqkm) ", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. slope
-plot(rawdata$NHD.NEXSS_SLOPE, rawdata$DO.slope.mgday, main="open channel respiration vs slope",
-   xlab="slope", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. log discharge
-plot((rawdata$NHD.NEXSS_log10_Disc), rawdata$DO.slope.mgday, main="open channel respiration vs log10 discharge",
-   xlab="discharge", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. log drainage
-plot((rawdata$NHD.NEXSS_log10_Drai), rawdata$DO.slope.mgday, main="open channel respiration vs log10 drainage",
-   xlab="drainage", ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. log residence
-plot((rawdata$NHD.NEXSS_log10_Resi), rawdata$DO.slope.mgday, main="open channel respiration vs log10 residence",
-   xlab="residence",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. log exchange
-plot((rawdata$NHD.NEXSS_log10_Exch), rawdata$DO.slope.mgday, main="open channel respiration vs log10 exchange",
-   xlab="exchange",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-#plot raw slope data vs. mean temperature
-plot(merged_T$T_1, merged_T$DO.slope.mgday, pch = 16, cex = 1.3,  main = "", xlab="Mean Temperature (C)",ylab="Respiration rate (mg O2/L*day)")+abline(lm(`DO.slope.mgday` ~ T_1, data=merged_T))
-
-#plot raw slope data vs. temperature slope
-plot(merged_T$T_1_slope, merged_T$DO.slope.mgday, pch = 16, cex = 1.3, col = "green", main = "open channel respiration vs temperature slope", xlab="temp slope (C/min)",ylab="DO slope (mg*l^-1*day^-1)")
-
-#plot raw slope data vs. TSS
-#nan out values under 4
-merged_TSS_detects <- subset(merged_TSS, TSSmgl >=4)
-plot(merged_TSS_detects$TSSmgl, merged_TSS_detects$DO.slope.mgday, pch = 16, cex = 1.3, col = "blue", main = "open channel respiration vs TSS", xlab="TSS (mg/l)",ylab="DO slope (mg*l^-1*day^-1)")
-#+abline(lm(`DO.slope.mgday` ~ TSSmgl, data=merged_TSS))
-TSS_linreg <- lm(`DO.slope.mgday` ~ TSSmgl, data=merged_TSS_detects)
-summary(TSS_linreg)
-
-
-plot(merged_T$T_1, merged_T$DO.slope.mgday, main="open channel respiration vs temperature",
-   xlab="temp (C)",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-temp_linreg <- lm(`DO.slope.mgday` ~ T_1, data=merged_T)
-summary(temp_linreg)
-
-#plot site mean slope data vs. mean temperature
-plot(site_mean$T_1, site_mean$DO.slope.mgday.mean, main="site mean open channel respiration vs temperature",
-   xlab="temp (C)",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-site_temp_linreg <- lm(`DO.slope.mgday.mean` ~ T_1, data=site_mean)
-summary(site_temp_linreg)
-
-temp_slope_linreg <- lm(`DO.slope.mgday` ~ T_1_slope, data=merged_T)
-summary(temp_slope_linreg)
-
 ggplot(rawdata, aes(x=SID, y=DO.slope.mgday)) + 
   stat_summary(fun=mean, geom="point", shape=18,size=3, color="red") +
   geom_dotplot(binaxis='y', stackdir='center',binwidth = 0.002,) +
   ylab("Respiration rate (mg O2/L*day)") + xlab("Site ID") + 
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),legend.position = c(0, 0))
-
 ```
 
-##initial chem data analysis
+#rate histogram
 ```{r message=FALSE}
+hist(rawdata$DO.slope.mgday,breaks=25,main="",xlab="Respiration rate (mg O2/L*day)", ylab="frequency")
+```
+#stream order
+```{r message=FALSE}
+#import stream order and catchment area data
+#\\pnl\projects\SBR_SFA\RC2\07_Geospatial_Data\RC2_all_stream_Attributes_updated.csv
+#\\pnl\projects\SBR_SFA\RC2\07_Geospatial_Data\RC2_all_topographic_Attributes_updated.csv
 
-plot(chemdata_merged$`00691_DIC_mg_per_L_as_C` , chemdata_merged$DO.slope.mgday.mean, main="open channel respiration vs DIC",
-   xlab="DIC (mg/l as C)",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
+stream_order<-read.csv("RC2_all_stream_Attributes_updated.csv")
+stream_order <- stream_order[,c("site_ID","StreamOrde")]
 
-temp_linreg <- lm(`DO.slope.mgday.mean` ~ `00691_DIC_mg_per_L_as_C`, data=chemdata_merged)
+Tbasin_area<-read.csv("RC2_all_topographic_Attributes_updated.csv")
+Tbasin_area <- Tbasin_area[,c("site_ID","TOT_BASIN_AREA")]
+
+spatialdata_merged<-merge(x=chemdata_merged, y=stream_order, by.x="IDmapping.ID", by.y="site_ID")
+spatialdata_merged<-merge(x=spatialdata_merged, y=Tbasin_area, by.x="IDmapping.ID", by.y="site_ID")
+
+write.csv(spatialdata_merged,"spatial_data.csv", row.names = FALSE)
+
+boxplot(DO.slope.mgday~StreamOrde,data=spatialdata_merged, main="",
+   xlab="Stream Order", ylab="Respiration rate (mg O2/L*day)")
+slope.streamorder <- lm(DO.slope.mgday ~ StreamOrde, data=spatialdata_merged)
+X = sort(unique(spatialdata_merged$StreamOrde))
+lines(x=1:length(X),
+y=predict(slope.streamorder,data.frame(StreamOrde=X)),col="blue",lwd=2)
+
+boxplot_linreg <- lm(DO.slope.mgday ~ StreamOrde, data=spatialdata_merged)
+summary(boxplot_linreg)
+```
+#mean temperature
+```{r message=FALSE}
+plot(rawdata$T_mean, rawdata$DO.slope.mgday, pch = 16, cex = 1.3, col = "black", main = "", xlab="Mean Temperature (C)",ylab="DO slope (mg*l^-1*day^-1)")+abline(lm(`DO.slope.mgday` ~ T_mean, data=rawdata))
+temp_linreg <- lm(`DO.slope.mgday` ~ T_mean, data=rawdata)
 summary(temp_linreg)
 
-
-plot(chemdata_merged$`00681_NPOC_mg_per_L_as_C`, chemdata_merged$DO.slope.mgday.mean, main="open channel respiration vs NPOC",
-   xlab="NPOC (mg/l as C)",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-#+abline(lm(`DO.slope.mgday.mean` ~ `00681_NPOC_mg_per_L_as_C`, data=chemdata_merged))
-
-temp_linreg <- lm(`DO.slope.mgday.mean` ~ `00681_NPOC_mg_per_L_as_C`, data=chemdata_merged)
-summary(temp_linreg)
-
-plot(chemdata_merged$`00602_TN_mg_per_L_as_N` , chemdata_merged$DO.slope.mgday.mean, main="open channel respiration vs TN",
-   xlab="TN (mg/l as N)",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-#+abline(lm(`DO.slope.mgday.mean` ~ `00602_TN_mg_per_L_as_N`, data=chemdata_merged))
-
-temp_linreg <- lm(`DO.slope.mgday.mean` ~ `00602_TN_mg_per_L_as_N`, data=chemdata_merged)
-summary(temp_linreg)
-
-plot(chemdata_merged$`00530_TSS_mg_per_L` , chemdata_merged$DO.slope.mgday.mean, main="open channel respiration vs TSS",
-   xlab="TSS (mg/l)",ylab="DO slope (mg*l^-1*day^-1)", pch=19)
-
-temp_linreg <- lm(`DO.slope.mgday.mean` ~ `00530_TSS_mg_per_L`, data=chemdata_merged)
-summary(temp_linreg)
 ```
