--- a/spatial_water_column_metabolism_for_paper.Rmd
+++ b/spatial_water_column_metabolism_for_paper.Rmd
@@ -62,7 +62,7 @@ site_mean <- aggregate(cbind(DO.slope.mgday,T_mean) ~ SID, data = rawdata, FUN =
 ```
 ## import chemistry data, format, and clean up
 
-```{r message=FALSE}
+```{r message=FALSE warning=FALSE}
 #chemistry data 
 #//pnl/projects/SBR_SFA/RC1/RC2-Data-Deliveries/RC2-Spatial-Study-2021-Sample-Data/SPS_DIC_NPOC_TN_TSS.csv
 chemdataheaders<-read.csv("SPS_DIC_NPOC_TN_TSS.csv",skip = 2, header = F, nrows = 1, as.is = T)
@@ -147,7 +147,7 @@ chemdata_agg <- subset(chemdata_agg, select = -(sample_id.y))
 #merge chem data with DO rate data
 chemdata_merged<-merge(x=chemdata_agg, y=site_mean, by.x="IDmapping.ID", by.y="SID",all=TRUE)
 #write chemdata_merged
-write.csv(chemdata_merged,"chem_data.csv", row.names = FALSE)
+#write.csv(chemdata_merged,"chem_data.csv", row.names = FALSE)
 ```
 
 #dot plot figure (comparison of repilcates)
