added descriptive stats for DO rates
Added code generating mean, sd, min, and max values for site_mean data table

--- a/spatial_water_column_metabolism_for_paper.Rmd
+++ b/spatial_water_column_metabolism_for_paper.Rmd
@@ -58,6 +58,14 @@ rawdata<-subset(rawdata, DO.NRMSE<=0.01)
 
 #average rate and temperature data by site
 site_mean <- aggregate(cbind(DO.slope.mgday,T_mean) ~ SID, data = rawdata, FUN = mean, na.rm = TRUE)
+print("mean")
+mean(site_mean$DO.slope.mgday)
+print("min")
+min(site_mean$DO.slope.mgday)
+print("max")
+max(site_mean$DO.slope.mgday)
+print("sd")
+sd(site_mean$DO.slope.mgday)
 
 ```
 ## import chemistry data, format, and clean up
